--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-    "name": "react-portfolio",
-    "version": "1.0.0",
-    "description": "A personal portfolio built with React",
-    "main": "src/index.js",
-    "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
-    },
-    "dependencies": {
-      "react": "^18.0.0",
-      "react-dom": "^18.0.0",
-      "react-scripts": "latest"
-    },
-    "devDependencies": {},
-    "keywords": [],
-    "author": "John Garnsey",
-    "license": "MIT"
+  "name": "react-portfolio",
+  "version": "1.0.0",
+  "description": "A personal portfolio built with React",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^7.1.5",
+    "react-scripts": "latest"
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "author": "John Garnsey",
+  "license": "MIT",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
-  
+}
